--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -214,13 +214,14 @@ jobs:
 
 
 workflows:
+  version: 2
   dummy:
     jobs:
       - dummy
   weekly:
     triggers:
       - schedule:
-           cron: "* 16 * * 5" # Friday @ 16:00 UTC (Mountain Daylight Time +7)
+           cron: "40 18 * * 5" # Friday @ 16:00 UTC (Mountain Daylight Time +7)
            filters:
              branches:
                only:
