--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -224,8 +224,7 @@ workflows:
            cron: "40 18 * * 5" # Friday @ 16:00 UTC (Mountain Daylight Time +7)
            filters:
              branches:
-               only:
-                 - weekly
+               only: weekly
     jobs:
       - build_ubuntu18_installer
       - build_centos7_installer
