--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,10 +82,9 @@ jobs:
           root: *workspace_root
           paths: 
             - installers
-
   build_osx_installer:
     macos:
-      xcode: "12.4.0"
+      xcode: "13.2.0"
     steps:
       - run:
           name: Make VAPOR-Deps
@@ -94,26 +93,74 @@ jobs:
             sudo chmod -R 777 /usr/local/VAPOR-Deps
             sudo chown -R `whoami` /usr/local/VAPOR-Deps
 
+      - restore_cache:
+          keys:
+            - clang12-{{ .Environment.CIRCLE_SHA1 }}
+            - libomp-{{ .Environment.CIRCLE_SHA1 }}
+
       - checkout
 
       - run:
-          name: Get dependencies 
+          name: Get third party libraries
           command: |
-            export DEPS=/usr/local/VAPOR-Deps/2019-Aug-Darwin.tar.xz
-            if [ ! -f $DEPS ]; then
-                ~/project/.circleci/getOSXDeps.sh
-            fi
+            pip3 install gdown
+            sudo mkdir -p /usr/local/VAPOR-Deps
+            sudo chmod 777 /usr/local/VAPOR-Deps
+            cd /usr/local/VAPOR-Deps
+            gdown https://drive.google.com/uc?id=1Q-IXlP_OgZSXsWKmT-smyrW9xnR-dUfg
+            cd /usr/local/VAPOR-Deps
+            tar xf 2019-Aug-Darwin.tar.xz -C /usr/local/VAPOR-Deps
+            chmod -R 777 /usr/local/VAPOR-Deps
+
+      - run:
+          name: Get cmake
+          command: |
+            brew install cmake
+
+      - run:
+          name: Get MacPorts
+          command: |
+            curl -k -O https://distfiles.macports.org/MacPorts/MacPorts-2.7.1.tar.bz2
+            tar xf MacPorts-2.7.1.tar.bz2
+            cd MacPorts-2.7.1/
+            ./configure
+            make
+            sudo make install
+
+      - run:
+          name: Get libomp
+          command: |
+            sudo /opt/local/bin/port selfupdate
+            (sudo yes || true) | sudo /opt/local/bin/port install libomp
+
+      - save_cache:
+          key: libomp-{{ .Environment.CIRCLE_SHA1 }}
+          paths:
+            - /opt/local
+
+      - run:
+          name: Get clang12
+          command: |
+            (sudo yes || true) | sudo /opt/local/bin/port install clang-12
+            sudo /opt/local/bin/port select --set clang mp-clang-12
+
+      - save_cache:
+          key: clang12-{{ .Environment.CIRCLE_SHA1 }}
+          paths:
+            - /opt/local
 
       - run:
           name: make VAPOR
           command: |
-            git checkout main
-            git pull --no-commit && git commit --allow-empty -m "Merge"
-            git reset --hard origin/main
             cp site_files/site.NCAR site.local
             mkdir build
             cd build
-            /usr/local/bin/cmake -DCPACK_BINARY_DRAGNDROP=ON -DCMAKE_BUILD_TYPE:String=Release -DDIST_INSTALLER:string=ON ..
+            git branch --set-upstream-to=origin/main main
+            git checkout main
+            git reset --hard origin/main
+            export PATH=/opt/local/bin:$PATH
+            sudo port select --set clang mp-clang-12
+            cmake -DCPACK_BINARY_DRAGNDROP=ON -DCMAKE_BUILD_TYPE:String=Release -DDIST_INSTALLER:string=ON -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang -DUSE_OMP
             make
             make installer
             for f in VAPOR3-*.dmg ; do mv "$f" "${f/Darwin/Darwin-Weekly}" ; done
@@ -231,7 +278,7 @@ workflows:
     triggers:
       - schedule:
            #cron: "0 20 * * 2" # Tuesday @ 20:00 UTC (Mountain Standard Time +6)
-           cron: "45 20 * * 4" # Thursday @ 20:45 UTC (Mountain Standard Time +6)
+           cron: "40 22 * * 3" # Thursday @ 20:45 UTC (Mountain Standard Time +6)
            filters:
              branches:
                only: weekly
