--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,12 +47,12 @@ jobs:
             git reset --hard origin/main
             & 'C:\\Program Files\\CMake\\bin\\cmake.exe' -S C:\Users\circleci\project -B C:\Users\circleci\project\build -DDIST_INSTALLER:string=ON -DCMAKE_BUILD_TYPE:STRING=Release -G 'Visual Studio 16 2019' -A x64
             msbuild C:\Users\circleci\project\build\PACKAGE.vcxproj /p:Configuration=Release /p:Platform=x64
-            mkdir -p C:\Users\circleci\project\tmp\installers
-            Copy-Item C:\Users\circleci\project\build\*.exe -Destination C:\Users\circleci\project\tmp\installers
+            mkdir -p C:\Users\circleci\project\tmp\workspace\installers
+            Copy-Item C:\Users\circleci\project\build\*.exe -Destination C:\Users\circleci\project\tmp\workspace\installers
           no_output_timeout: 45m
 
       - store_artifacts:
-          path: C:\Users\circleci\project\tmp\installers
+          path: C:\Users\circleci\project\tmp\workspace\installers
 
       - persist_to_workspace:
           root: *workspace_root
@@ -139,7 +139,7 @@ jobs:
             sudo port select --set clang mp-clang-12
             cmake -DCPACK_BINARY_DRAGNDROP=ON -DCMAKE_BUILD_TYPE:String=Release -DDIST_INSTALLER:string=ON -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang -DUSE_OMP=ON ..
             make -j2
-            make installer
+            make installer -j2
             mkdir -p /tmp/workspace/installers
             mv *.dmg /tmp/workspace/installers
           no_output_timeout: 30m
@@ -168,12 +168,13 @@ jobs:
             git reset --hard origin/main
             cmake -DCMAKE_BUILD_TYPE:String=Release -DDIST_INSTALLER:string=ON -DUSE_OMP=ON ..
             make -j2
-            make installer
-            mkdir -p /tmp/installers
-            mv *.sh /tmp/installers
+            make installer -j2
+            for f in VAPOR3-*.sh ; do mv "$f" "${f/Linux/Ubuntu18-Weekly}" ; done
+            mkdir -p /tmp/workspace/installers
+            mv *.sh /tmp/workspace/installers
 
       - store_artifacts:
-          path: /tmp/installers
+          path: /tmp/workspace/installers
 
       - persist_to_workspace:
           root: *workspace_root
@@ -196,12 +197,13 @@ jobs:
             git reset --hard origin/main
             cmake3 -DCMAKE_BUILD_TYPE:String=Release -DDIST_INSTALLER:string=ON -DUSE_OMP=ON ..
             make -j2
-            make installer
-            mkdir -p /tmp/installers
-            mv *.sh /tmp/installers
+            make installer -j2
+            for f in VAPOR3-*.sh ; do mv "$f" "${f/Linux/CentOS7-Weekly}" ; done
+            mkdir -p /tmp/workspace/installers
+            mv *.sh /tmp/workspace/installers
 
       - store_artifacts:
-          path: /tmp/installers
+          path: /tmp/workspace/installers
 
       - persist_to_workspace:
           root: *workspace_root
