--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -247,8 +247,8 @@ jobs:
             shaMessage="$title$ubuntuSha$centosSha$osxSha$winSha"
             date=`date +"%d_%m_%y"`
             echo $shaMessage > "/tmp/workspace/installers/sha256.txt"
-            echo ghr -b "Weely installers are untested an may not be stable.  Built with commit ${hash} on ${date} \(DD-MM-YY\)"
-            ghr -b "Weely installers are untested an may not be stable.  Built with commit ${hash} on ${date} \(DD-MM-YY\)" -t ${
+            echo ghr -b "Weely installers are untested an may not be stable.  Built with commit ${hash} on ${date} \(DD-MM-YY\)" -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -prerelease -c ${CIRCLE_SHA1} -recreate -c ${hash} -n ${tag} ${tag} /tmp/workspace/installers
+            ghr -b "Weely installers are untested an may not be stable.  Built with commit ${hash} on ${date} \(DD-MM-YY\)" -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -prerelease -c ${CIRCLE_SHA1} -recreate -c ${hash} -n ${tag} ${tag} /tmp/workspace/installers
 
 
 workflows:
@@ -256,7 +256,7 @@ workflows:
   weekly:
     triggers:
       - schedule:
-           cron: "7 20 * * 2" # Tuesday @ 20:00 UTC (Mountain Standard Time +6)
+           cron: "45 14 * * 3" # Tuesday @ 20:00 UTC (Mountain Standard Time +6)
            filters:
              branches:
                only: weekly
