--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -179,7 +179,11 @@ jobs:
   
     steps:
       - checkout
-  
+ 
+      - run:
+          name: update openssl
+          command: yum update openssl
+ 
       - run:
           name: cmake3 and make
           command: |
@@ -305,6 +309,10 @@ jobs:
         - checkout
   
         - run:
+            name: update openssl
+            command: yum update openssl
+
+        - run: 
             name: make debug
             command: |
               cd /root/project/build
@@ -470,13 +478,13 @@ workflows:
   version: 2
   build:
     jobs:
-      - build_ubuntu18
-      - build_centos7
-      - test_clang_format
+      #- build_ubuntu18
+      #- build_centos7
+      #- test_clang_format
       #- build_win10_installer
       #- build_osx_installer
       #- build_ubuntu18_installer
-      #- build_centos7_installer
+      - build_centos7_installer
       #- release_weekly_installers:
       #    requires:
       #      - build_ubuntu18_installer
