--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -470,19 +470,19 @@ workflows:
   version: 2
   build:
     jobs:
-      - build_ubuntu18
-      - build_centos7
-      - test_clang_format
-      #- build_win10_installer
-      #- build_osx_installer
-      #- build_ubuntu18_installer
-      #- build_centos7_installer
-      #- release_weekly_installers:
-      #    requires:
-      #      - build_ubuntu18_installer
-      #      - build_centos7_installer
-      #      - build_osx_installer
-      #      - build_win10_installer
+      #- build_ubuntu18
+      #- build_centos7
+      #- test_clang_format
+      - build_win10_installer
+      - build_osx_installer
+      - build_ubuntu18_installer
+      - build_centos7_installer
+      - release_weekly_installers:
+          requires:
+            - build_ubuntu18_installer
+            - build_centos7_installer
+            - build_osx_installer
+            - build_win10_installer
   weekly:
       triggers:
         - schedule:
