--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,6 +43,7 @@ jobs:
             mkdir build
             cd build
             git checkout $CIRCLE_BRANCH
+            git reset --hard origin/main
             & 'C:\\Program Files\\CMake\\bin\\cmake.exe' -S C:\Users\circleci\project -B C:\Users\circleci\project\build -DDIST_INSTALLER:string=ON -DCMAKE_BUILD_TYPE:STRING=Release -G 'Visual Studio 16 2019' -A x64
             msbuild C:\Users\circleci\project\build\PACKAGE.vcxproj /p:Configuration=Release /p:Platform=x64
             mkdir -p C:\Users\circleci\project\tmp\workspace\installers
@@ -129,6 +130,7 @@ jobs:
             mkdir build
             cd build
             git checkout $CIRCLE_BRANCH
+            git reset --hard origin/main
             export PATH=/opt/local/bin:$PATH
             sudo port select --set clang mp-clang-12
             cmake -DCPACK_BINARY_DRAGNDROP=ON -DCMAKE_BUILD_TYPE:String=Release -DDIST_INSTALLER:string=ON -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang -DUSE_OMP=ON ..
@@ -158,6 +160,7 @@ jobs:
           command: |
             cd /root/project/build
             git checkout $CIRCLE_BRANCH
+            git reset --hard origin/main
             cmake -DCMAKE_BUILD_TYPE:String=Release -DDIST_INSTALLER:string=ON -DUSE_OMP=ON ..
             make -j2
             make installer -j2
@@ -185,6 +188,7 @@ jobs:
           command: |
             cd /root/project/build
             git checkout $CIRCLE_BRANCH
+            git reset --hard origin/main
             cmake3 -DCMAKE_BUILD_TYPE:String=Release -DDIST_INSTALLER:string=ON -DUSE_OMP=ON ..
             make -j2
             make installer -j2
@@ -470,19 +474,19 @@ workflows:
   version: 2
   build:
     jobs:
-      - build_ubuntu18
-      - build_centos7
-      - test_clang_format
-      #- build_win10_installer
-      #- build_osx_installer
-      #- build_ubuntu18_installer
-      #- build_centos7_installer
-      #- release_weekly_installers:
-      #    requires:
-      #      - build_ubuntu18_installer
-      #      - build_centos7_installer
-      #      - build_osx_installer
-      #      - build_win10_installer
+      #- build_ubuntu18
+      #- build_centos7
+      #- test_clang_format
+      - build_win10_installer
+      - build_osx_installer
+      - build_ubuntu18_installer
+      - build_centos7_installer
+      - release_weekly_installers:
+          requires:
+            - build_ubuntu18_installer
+            - build_centos7_installer
+            - build_osx_installer
+            - build_win10_installer
   weekly:
       triggers:
         - schedule:
