--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -436,12 +436,12 @@ jobs:
       xcode: "12.4.0"
     steps:
       - checkout
-      #- run:
-      #    name: get main
-      #    command: |
-      #      git checkout main
-      #      git pull --no-commit && git commit --allow-empty -m "Merge"
-      #      git reset --hard origin/main
+      - run:
+          name: get main
+          command: |
+            git checkout main
+            git pull --no-commit && git commit --allow-empty -m "Merge"
+            git reset --hard origin/main
       - *attach_workspace
       - run:
           name: publish release
