--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -179,7 +179,17 @@ jobs:
   
     steps:
       - checkout
-  
+
+      - run:
+          name: update 3rd party libraries
+          command: |
+            rm -rf /usr/local/VAPOR-Deps/2019-Aug
+            fileid="1In3Q8fA0VCm2en1ncBQI6dzUfatLDA0y"
+            filename="/usr/local/VAPOR-Deps/2019-Aug-CentOS-post2022.tar.xz"
+            curl -c ./cookie -s -L "https://drive.google.com/uc?export=download&id=${fileid}" > /dev/null
+            curl -Lb ./cookie \ "https://drive.google.com/uc?export=download&confirm=`awk '/download/ {print $NF}' ./cookie`&id=${fileid}" -o ${filename}
+            bsdtar -xf ${filename} -C /usr/local/VAPOR-Deps
+ 
       - run:
           name: cmake3 and make
           command: |
@@ -573,15 +583,15 @@ workflows:
   version: 2
   build:
     jobs:
-      - clang-tidy
-      - build_ubuntu18
-      - build_centos7
+      #- clang-tidy
+      #- build_ubuntu18
+      #- build_centos7
       #- foo
       #- test_clang_format
       #- build_win10_installer
       #- build_osx_installer
       #- build_ubuntu18_installer
-      #- build_centos7_installer
+      - build_centos7_installer
       #- release_weekly_installers:
       #    requires:
       #      - build_ubuntu18_installer
