--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -184,10 +184,8 @@ jobs:
           name: update 3rd party libraries
           command: |
             rm -rf /usr/local/VAPOR-Deps/2019-Aug
-            fileid="1In3Q8fA0VCm2en1ncBQI6dzUfatLDA0y"
+            gdown https://drive.google.com/uc?id=1In3Q8fA0VCm2en1ncBQI6dzUfatLDA0y
             filename="/usr/local/VAPOR-Deps/2019-Aug-CentOS-post2022.tar.xz"
-            curl -c ./cookie -s -L "https://drive.google.com/uc?export=download&id=${fileid}" > /dev/null
-            curl -Lb ./cookie \ "https://drive.google.com/uc?export=download&confirm=`awk '/download/ {print $NF}' ./cookie`&id=${fileid}" -o ${filename}
             bsdtar -xf ${filename} -C /usr/local/VAPOR-Deps
  
       - run:
