--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -184,6 +184,7 @@ jobs:
           name: update 3rd party libraries
           command: |
             rm -rf /usr/local/VAPOR-Deps/2019-Aug
+            pip3 install gdown --upgrade
             gdown https://drive.google.com/uc?id=1In3Q8fA0VCm2en1ncBQI6dzUfatLDA0y
             filename="/usr/local/VAPOR-Deps/2019-Aug-CentOS-post2022.tar.xz"
             bsdtar -xf ${filename} -C /usr/local/VAPOR-Deps
