--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -157,7 +157,7 @@ jobs:
           name: update 3rd party libraries
           command: |
             rm -rf /usr/local/VAPOR-Deps/2019-Aug
-            pip3 install gdown --upgrade
+            pip install gdown --upgrade
             gdown https://drive.google.com/uc?id=1CD3qrPuj03S8x1XshDI_3GRqCeUVLvpm
             filename="/root/project/2019-Aug-CentOS-post2022.tar.xz"
             bsdtar -xf ${filename} -C /usr/local/VAPOR-Deps
@@ -336,7 +336,7 @@ jobs:
           name: update 3rd party libraries
           command: |
             rm -rf /usr/local/VAPOR-Deps/2019-Aug
-            pip3 install gdown --upgrade
+            pip install gdown --upgrade
             gdown https://drive.google.com/uc?id=1CD3qrPuj03S8x1XshDI_3GRqCeUVLvpm
             filename="/root/project/2019-Aug-CentOS-post2022.tar.xz"
             bsdtar -xf ${filename} -C /usr/local/VAPOR-Deps
