--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,7 +81,7 @@ jobs:
             sudo mkdir -p /usr/local/VAPOR-Deps
             sudo chmod 777 /usr/local/VAPOR-Deps
             cd /usr/local/VAPOR-Deps
-            gdown https://drive.google.com/uc?id=1KnUoBfOLuF6VJMXG6KcljjKMpr4VGxQ6
+            gdown https://drive.google.com/uc?id=1Q-IXlP_OgZSXsWKmT-smyrW9xnR-dUfg
             cd /usr/local/VAPOR-Deps
             tar xf 2019-Aug-Darwin-2022.tar.xz -C /usr/local/VAPOR-Deps
             chmod -R 777 /usr/local/VAPOR-Deps
@@ -612,13 +612,13 @@ workflows:
   version: 2
   build:
     jobs:
-      - clang-tidy
-      - build_ubuntu18
-      - build_centos7
+      #- clang-tidy
+      #- build_ubuntu18
+      #- build_centos7
       #- foo
       #- test_clang_format
       #- build_win10_installer
-      #- build_osx_installer
+      - build_osx_installer
       #- build_ubuntu18_installer
       #- build_centos7_installer
       #- release_weekly_installers:
